[build-system]
requires = ["setuptools", "setuptools-scm]
build-backend = "setuptools.build_meta"

[project]
name = "hover"
version = "0.0.1"
authors = [
    { name="Juan Diego Ugueto", email="jduguetom@gmail.com" },
]
description = "Hover is a simple API built with FastAPI for educational purposes."
readme = "README.md"
license = { file = LICENSE }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.110.1",
    "pyyaml==6.0.1",
    "uvicorn==0.29.0",
]

[project.urls]
Homepage = "https://github.com/ugueto/hover"
Issues = "https://github.com/ugueto/hover/issues"

[owner]
name = "Juan Diego Ugueto"
